--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+
+    <string name="facebook_app_id">443386756701270</string>
+    <string name="fb_login_protocol_scheme">fb443386756701270</string>
+    <string name="server_client_id">434477538698-qn16b816e3i4d7gmeqchc0ofh0unee3n.apps.googleusercontent.com</string>
 </resources>
