--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,13 +7,13 @@
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Configuración</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_explore">Explorar</string>
 
     <string name="facebook_app_id">443386756701270</string>
     <string name="fb_login_protocol_scheme">fb443386756701270</string>
     <string name="server_client_id">434477538698-qn16b816e3i4d7gmeqchc0ofh0unee3n.apps.googleusercontent.com</string>
+    <string name="action_log_out">Cerrar sesion</string>
+    <string name="title_activity_pick_location">Seleccione ubicación</string>
 </resources>
