Display user location by default

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="server_client_id">434477538698-qn16b816e3i4d7gmeqchc0ofh0unee3n.apps.googleusercontent.com</string>
     <string name="action_log_out">Cerrar sesion</string>
     <string name="title_activity_pick_location">Seleccione ubicación</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
