--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,20 @@
     <string name="title_activity_pick_location">Seleccione ubicación</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <array name="range_options">
+        <item>200m</item>
+        <item>500m</item>
+        <item>1000m</item>
+        <item>2000m</item>
+    </array>
+    <array name="report_type_options">
+        <item>All</item>
+        <item>Pending</item>
+        <item>Reviewed</item>
+    </array>
+    <string name="title_activity_add_business">MainActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
 </resources>
